# aceffmpeg

./: CMakeLists.txt  README.md
cmake/: FFmpegConfig.cmake.in
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  libavdevice.58.13.100.dylib  libavfilter.7.110.100.dylib  libavformat.58.76.100.dylib  libavutil.56.70.100.dylib  libpostproc.55.9.100.dylib  libswresample.3.9.100.dylib  libswscale.5.9.100.dylib  postproc.lib  swresample.lib  swscale.lib
ffmpeg/lib/mac-arm64/: libavformat.58.76.100.dylib  libpostproc.55.9.100.dylib  libswresample.3.9.100.dylib  libswscale.5.9.100.dylib
ffmpeg/lib/macos/arm64/: libSDL2-2.0.0.dylib  libXau.6.dylib  libXdmcp.6.dylib  libavdevice.58.13.100.dylib  libavfilter.7.110.100.dylib  libavformat.58.76.100.dylib  libavutil.56.70.100.dylib  libpostproc.55.9.100.dylib  libswresample.3.9.100.dylib  libswscale.5.9.100.dylib  libxcb-shape.0.dylib  libxcb-shm.0.dylib  libxcb-xfixes.0.dylib  libxcb.1.dylib
ffmpeg/lib/macos/x86_64/: libpostproc.55.9.100.dylib  libswresample.3.9.100.dylib
ffmpeg/lib/win/: avfilter.lib  avutil.lib  swscale.lib
test_example/: CMakeLists.txt  test_ffmpeg.cpp
